--- a/cloud-stream-dynamic-destination-processor/pom.xml
+++ b/cloud-stream-dynamic-destination-processor/pom.xml
@@ -4,53 +4,31 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.solace.samples.spring.scs</groupId>
-	<artifactId>cloud-stream-dynamic-destination-processor</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
-	<name>cloud-stream-dynamic-destination-processor</name>
-	<description>Sample dynamic processor for Spring Cloud Stream using Solace PubSub+ binder</description>
-
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.5</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.solace.samples.spring</groupId>
+		<artifactId>spring-samples</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<properties>
-		<spring-cloud.version>2020.0.2</spring-cloud.version>
-		<solace-spring-cloud-bom.version>2.1.0</solace-spring-cloud-bom.version>
-	</properties>
+	<groupId>com.solace.samples.spring.scs</groupId>
+	<artifactId>cloud-stream-dynamic-destination-processor</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.solace.spring.cloud</groupId>
-				<artifactId>solace-spring-cloud-bom</artifactId>
-				<version>${solace-spring-cloud-bom.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+	<name>cloud-stream-dynamic-destination-processor</name>
+	<description>Sample dynamic processor for Spring Cloud Stream using Solace PubSub+ binder</description>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.solace.spring.cloud</groupId>
 			<artifactId>spring-cloud-starter-stream-solace</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -66,5 +44,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
